--- a/Server/package.json
+++ b/Server/package.json
@@ -6,6 +6,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mssql": "^12.1.0",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.11",
     "sha256": "^0.2.0"
   }
